# plyr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  meson.build  playqueue.c  playqueue.h  plyr.c  plyr.c.bak  queue.c  queue.h  song.c  song.h
.cache/clangd/index/: aifffile.cpp.58DBDC1C6A7AF08B.idx  aifffile.h.478F7F2A5400C8C5.idx  aiffproperties.cpp.6F4A65F199909225.idx  aiffproperties.h.F2CB807D3BE8942E.idx  apefile.cpp.09F14597CF1853B8.idx  apefile.h.4A76443163253898.idx  apefooter.cpp.01026EEE231FA556.idx  apefooter.h.A0F2DF22D9905AE5.idx  apeitem.cpp.1AC17CF7335322E4.idx  apeitem.h.B34B5F389A98F60C.idx  apeproperties.cpp.81F7D7B4109AE27E.idx  apeproperties.h.6172DB7F0BAFCD67.idx  apetag.cpp.44346ECC5AD2F3BC.idx  apetag.h.11DF095686F88989.idx  asfattribute.cpp.4FFC08E3E4FF37B6.idx  asfattribute.h.59CFB71EBCD54FEF.idx  asffile.cpp.1D60B02F3B12E3C4.idx  asffile.h.92176C85757EA142.idx  asfpicture.cpp.B15F9FBA8801291D.idx  asfpicture.h.86B59B5E4214BBC7.idx  asfproperties.cpp.1A465D44AF5863DE.idx  asfproperties.h.BA2CEA872E401C5D.idx  asftag.cpp.52A073D8D2F48CE9.idx  asftag.h.A6ED03C5AC30222F.idx  asfutils.h.C9BCE9B54DCE6F51.idx  attachedpictureframe.cpp.FCB747EF1FC96854.idx  attachedpictureframe.h.3229D8DD72B1F4B1.idx  audioproperties.cpp.1423C537DEBA570D.idx  audioproperties.h.779DACFFAC769659.idx  chapterframe.cpp.BB6F19D8E9D70A8B.idx  chapterframe.h.6EFEDABB7A237B51.idx  commentsframe.cpp.AB01A6E839FDD7A2.idx  commentsframe.h.0D1C8A3A5A9D3DD1.idx  dsdiffdiintag.cpp.0265088E2B7F767D.idx  dsdiffdiintag.h.C7C50840D4C87267.idx  dsdifffile.cpp.422D73E76041FD01.idx  dsdifffile.h.7DE36A3368CC852D.idx  dsdiffproperties.cpp.A38069FB0566ECD3.idx  dsdiffproperties.h.9094CA2CBACED587.idx  dsffile.cpp.A70A7C3F6D426548.idx  (+193 more)
.github/workflows/: main.yml
build_release/: plyr
libs/nativefiledialog-cmake/: CMakeLists.txt
src/: audio.c  audio.h  playqueue.c  plyr.c  queue.c  queue.h  ui.c  ui.h
